# kd_common

./: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
include/: kd_api.h  kd_common.h  kd_console.h  kd_crypto.h  kd_http.h  kd_mdns.h  kd_mem.h  kd_ntp.h  kd_ota.h  kd_provisioning.h  kd_wifi.h  kdc_heap_tracing.h  nvs_handle.h  nvs_handle.hpp
src/: api.c  api.cpp  api.h  ble_console.c  ble_console.cpp  ble_console.h  ble_console_protocol.c  ble_console_protocol.cpp  ble_console_protocol.h  console.c  console.cpp  console.h  crypto.c  crypto.cpp  crypto.h  crypto_console.c  crypto_console.cpp  crypto_console.h  crypto_internal.h  crypto_keygen.c  crypto_keygen.cpp  crypto_storage.c  crypto_storage.cpp  device_identifiers.c  device_identifiers.cpp  embedded_tz_db.c  embedded_tz_db.cpp  embedded_tz_db.h  eth.c  kd_common.c  kd_common.cpp  kd_http.c  kdc_heap_tracing.c  kdc_heap_tracing.cpp  kdmdns.c  kdmdns.cpp  kdmdns.h  net.c  ntp.c  ntp.cpp  (+12 more)
src/include/: api.h  ble_console.h  ble_console_protocol.h  console.h  crypto.h  crypto_console.h  crypto_internal.h  eth.h  kdmdns.h  net.h  ntp.h  nvs_helper.h  ota.h  provisioning.h  wifi.h
srcs/: crypto.cpp  crypto.h  device_identifiers.cpp  device_identifiers.h  kd_common.cpp  kd_common.h  provisioning.cpp  provisioning.h
srcs_private/: crypto_private.cpp  crypto_private.h  custom_prov_endpoint.cpp  custom_prov_endpoint.h  provisioning_private.cpp  wifi_private.cpp
